# GIMS

./: .gitignore  CMakeLists.txt  CreateApp.cmake  CreateCodeStub.ps1  README.md  nuget.cmake  vcpkg.json
Assignments/: CMakeLists.txt
Assignments/A0MeshViewer/: CMakeLists.txt
Assignments/A0MeshViewer/include/: TriangleApp.h
Assignments/A0MeshViewer/shaders/: TriangleMesh.hlsl
Assignments/A0MeshViewer/src/: TriangleApp.cpp  main.cpp
Assignments/A1SceneGraphViewer/: CMakeLists.txt
Assignments/A1SceneGraphViewer/include/: AABB.hpp  Scene.hpp  SceneFactory.hpp  SceneGraphViewerApp.hpp  Texture2DD3D12.hpp  TriangleMeshD3D12.hpp
Assignments/A1SceneGraphViewer/shaders/: TriangleMesh.hlsl
Assignments/A1SceneGraphViewer/src/: AABB.cpp  ConstantBufferD3D12.cpp  Scene.cpp  SceneFactory.cpp  SceneGraphViewerApp.cpp  Texture2DD3D12.cpp  TriangleMeshD3D12.cpp  main.cpp
Assignments/RayTracing/: CMakeLists.txt
Assignments/RayTracing/include/: ConstantBufferD3D12.hpp  RayTracingUtils.hpp  Scene.hpp  SceneFactory.hpp  SceneGraphViewerApp.hpp  TriangleMeshD3D12.hpp
Assignments/RayTracing/shaders/: TriangleMesh.hlsl
Assignments/RayTracing/src/: ConstantBufferD3D12.cpp  RayTracingUtils.cpp  Scene.cpp  SceneFactory.cpp  SceneGraphViewerApp.cpp  TriangleMeshD3D12.cpp  main.cpp
Assignments/second-assignment-scene-graph-viewer/: CMakeLists.txt
Assignments/second-assignment-scene-graph-viewer/include/: AABB.hpp  Scene.hpp  SceneFactory.hpp  SceneGraphViewerApp.hpp  TriangleMeshD3D12.hpp
Assignments/second-assignment-scene-graph-viewer/shaders/: TriangleMesh.hlsl
Assignments/second-assignment-scene-graph-viewer/src/: AABB.cpp  ConstantBufferD3D12.cpp  Scene.cpp  SceneFactory.cpp  SceneGraphViewerApp.cpp  Texture2DD3D12.cpp  TriangleMeshD3D12.cpp  main.cpp
Tutorials/: CMakeLists.txt
Tutorials/LS01Communication/: CMakeLists.txt
Tutorials/LS01Communication/shaders/: Communication.hlsl
Tutorials/LS01Communication/src/: Communication.cpp
Tutorials/LS02VertexBuffer/: CMakeLists.txt
Tutorials/LS02VertexBuffer/src/: VertexBuffer.cpp
Tutorials/T00GLM/: CMakeLists.txt
Tutorials/T00GLM/src/: GLMExample.cpp
Tutorials/T01BasicFramework/: CMakeLists.txt
Tutorials/T01BasicFramework/src/: BasicFrameWork.cpp
Tutorials/T02Triangle/: CMakeLists.txt
Tutorials/T02Triangle/src/: TriangleApp.cpp
Tutorials/T03Ellipse/: CMakeLists.txt
Tutorials/T03Ellipse/shaders/: Ellipse.hlsl
Tutorials/T03Ellipse/src/: EllipseApp.cpp
Tutorials/T03TwoTriangles/: CMakeLists.txt
Tutorials/T03TwoTriangles/shaders/: TwoTriangles.hlsl
Tutorials/T03TwoTriangles/src/: TwoTrianglesApp.cpp
Tutorials/T04Ellipsis/: CMakeLists.txt
Tutorials/T04Ellipsis/shaders/: EllipsisApp.hlsl
Tutorials/T04Ellipsis/src/: EllipsisApp.cpp
Tutorials/T05RootConstant/: CMakeLists.txt
Tutorials/T05RootConstant/shaders/: RootConstant.hlsl
Tutorials/T05RootConstant/src/: RootConstantApp.cpp
Tutorials/T06RootConstantBuffer/: CMakeLists.txt
Tutorials/T06RootConstantBuffer/shaders/: RootConstantBuffer.hlsl
Tutorials/T06RootConstantBuffer/src/: RootConstantBufferApp.cpp
Tutorials/T07VertexBuffer/: CMakeLists.txt
Tutorials/T07VertexBuffer/shaders/: VertexBuffer.hlsl
Tutorials/T07VertexBuffer/src/: VertexBufferApp.cpp
Tutorials/T08VertexIndexBuffer/: CMakeLists.txt
Tutorials/T08VertexIndexBuffer/shaders/: VertexIndexBuffer.hlsl
Tutorials/T08VertexIndexBuffer/src/: VertexIndexBufferApp.cpp
Tutorials/T09Texture/: CMakeLists.txt
Tutorials/T09Texture/shaders/: Texture.hlsl
Tutorials/T09Texture/src/: TextureApp.cpp
Tutorials/T10ConstantBuffer/: CMakeLists.txt
Tutorials/T10ConstantBuffer/src/: ConstantBufferApp.cpp
Tutorials/T11TwoConstantBuffers/: CMakeLists.txt
Tutorials/T11TwoConstantBuffers/src/: TwoConstantBuffersApp.cpp
Tutorials/T12TwoTexturesOneTable/: CMakeLists.txt
Tutorials/T12TwoTexturesOneTable/shaders/: TwoTextures.hlsl
Tutorials/T12TwoTexturesOneTable/src/: TwoTexturesOneTableApp.cpp
Tutorials/T13TwoTexturesTwoTables/: CMakeLists.txt
Tutorials/T13TwoTexturesTwoTables/shaders/: TwoTextures.hlsl
Tutorials/T13TwoTexturesTwoTables/src/: TwoTexturesTwoTablesApp.cpp
Tutorials/T14ComputeShaderVectorAdd/: CMakeLists.txt
Tutorials/T14ComputeShaderVectorAdd/shaders/: VectorAdd.hlsl
Tutorials/T14ComputeShaderVectorAdd/src/: ComputeShaderVectorAdd.cpp
Tutorials/T15ComputeShaderWriteToRenderTarget/: CMakeLists.txt
Tutorials/T15ComputeShaderWriteToRenderTarget/shaders/: WriteToRenderTarget.hlsl
Tutorials/T15ComputeShaderWriteToRenderTarget/src/: ComputeShaderWriteToRenderTarget.cpp
Tutorials/T16ComputeShaderPostProcess/: CMakeLists.txt
Tutorials/T16ComputeShaderPostProcess/shaders/: ComputeShaderPostProcess.hlsl  Triangle.hlsl
Tutorials/T16ComputeShaderPostProcess/src/: ComputeShaderPostProcess.cpp
Tutorials/T17HelloTriangleRayTracing/: CMakeLists.txt
Tutorials/T17HelloTriangleRayTracing/src/: TriangleApp.cpp
Tutorials/T17TriangleRayTracing/: CMakeLists.txt
Tutorials/T17TriangleRayTracing/DXRHelpers/: DXRHelper.h
Tutorials/T17TriangleRayTracing/DXRHelpers/nv_helpers_dx12/: BottomLevelASGenerator.cpp  BottomLevelASGenerator.h  RaytracingPipelineGenerator.cpp  RaytracingPipelineGenerator.h  RootSignatureGenerator.h  ShaderBindingTableGenerator.cpp  ShaderBindingTableGenerator.h  TopLevelASGenerator.h
Tutorials/T17TriangleRayTracing/include/: RayTracingRenderer.hpp
Tutorials/T17TriangleRayTracing/shaders/: RayTracing.hlsl  Triangle.cso  Triangle.hlsl  hlsl.h
Tutorials/T17TriangleRayTracing/src/: RayTracingRenderer.cpp
gimslib/: CMakeLists.txt
gimslib/include/gimslib/: types.hpp
gimslib/include/gimslib/d3d/: DX12App.hpp  DX12Util.hpp  HLSLCompiler.hpp  UploadHelper.hpp
gimslib/include/gimslib/dbg/: HrException.hpp
gimslib/include/gimslib/io/: CograBinaryMeshFile.hpp
gimslib/include/gimslib/sys/: Event.hpp
gimslib/include/gimslib/ui/: ExaminerController.hpp  PitchShiftControl.hpp  TrackballControl.hpp
gimslib/src/gimslib/d3d/: DX12App.cpp  DX12Util.cpp  HLSLCompiler.cpp  UploadHelper.cpp
gimslib/src/gimslib/sys/: Event.cpp
(+27 files in other folders)
