add_subdirectory(./A0MeshViewer)
set_target_properties (A0MeshViewer PROPERTIES FOLDER Assignments)

add_subdirectory(./A1SceneGraphViewer)
set_target_properties (A1SceneGraphViewer PROPERTIES FOLDER Assignments)

add_subdirectory(./second-assignment-scene-graph-viewer)
set_target_properties (second-assignment-scene-graph-viewer PROPERTIES FOLDER Assignments)

add_subdirectory(./RayTracing)
set_target_properties (RayTracing PROPERTIES FOLDER Assignments)

